laborations/lab1/test/bad/bad076.cc
inline (cout << 5) bar () {}
